# papersummary

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gui.py  papersummary.py  pdf2txt.py  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
papersummary/: base.py  docx2txt.py  gui.py  main.py  pdf2txt.py  pptx2txt.py  utils.py
papersummary/extractors/: __init__.py  base.py  docx.py  pdf.py  pptx.py
tests/extractors/: test_base.py
