[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papersummary"
dynamic = ["version"]
description = "Lightweight pipeline for summarizing documents."
requires-python = ">=3.10"

authors = [
    {name = "Erebus Oh, email = TBD@example.com"},
]

license = "MIT"
license-files = ["LICENSE"] 
readme = "README.md"

dependencies = [
    "PyPDF2",
    "pyinstaller",
    "python-pptx",
    "python-docx",
    "pyperclip",
    "PySide6[QApplication]",
]
[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pylint"
]
full = ["papersummary[dev]"]

[project.scripts]
papersummary = "papersummary.gui:main"

[tool.setuptools.packages.find]
# Automatically find all packages starting in root directory
where = ["."]

[project.urls]
# Documentation = "TBD"
Repository = "https://github.com/ereoh/papersummary"

[tool.setuptools.dynamic]
version = {attr = "papersummary.__version__"}

# black
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | dist
)/
'''
[tool.pylint.main]
fail-under = 9.0

[tool.pylint.messages_control]
disable = "line-too-long, missing-final-newline, trailing-whitespace, bare-except, too-few-public-methods, wrong-import-order"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --import-mode=importlib"
testpaths = ["tests"]